# rustviz

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
analyzer/: Cargo.toml
analyzer/src/: cargo.rs  graph.rs  lib.rs  model.rs  parse.rs  visit.rs
analyzer/src/metrics/: architecture.rs  complexity.rs  mod.rs  performance.rs  security.rs
analyzer/tests/: analyze.rs
analyzer/tests/fixtures/depworkspace/: Cargo.toml
analyzer/tests/fixtures/depworkspace/app/: Cargo.toml
analyzer/tests/fixtures/depworkspace/app/src/: lib.rs
analyzer/tests/fixtures/depworkspace/core/: Cargo.toml
analyzer/tests/fixtures/depworkspace/core/src/: lib.rs
analyzer/tests/fixtures/depworkspace/leaf/: Cargo.toml
analyzer/tests/fixtures/depworkspace/leaf/src/: lib.rs
analyzer/tests/fixtures/depworkspace/testutil/: Cargo.toml
analyzer/tests/fixtures/depworkspace/testutil/src/: lib.rs
analyzer/tests/fixtures/sample/: Cargo.toml
analyzer/tests/fixtures/sample/src/: lib.rs
analyzer/tests/fixtures/storage/: Cargo.toml
analyzer/tests/fixtures/storage/src/: lib.rs
docs/: architecture.md
server/: Cargo.toml  build.rs
server/src/: coverage.rs  main.rs  tests.rs
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.tsx  TestView.tsx  aggregate.ts  api.ts  controls.tsx  coverage.ts  graph3d.ts  inspector.tsx  lenses.ts  schema.ts  simulation.ts  styles.css  testRun.ts  treemap.tsx
web/src/diagrams/: DepsView.tsx  DetailPanel.tsx  DiagramView.tsx  ERView.tsx  IsometricRenderer.tsx  LayeredRenderer.tsx  ThreeRenderer.tsx  ZoomPanSvg.tsx  (+7 more)
