[workspace]
resolver = "2"
members = ["analyzer", "server"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
syn = { version = "2", features = ["full", "visit", "extra-traits"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
cargo_metadata = "0.18"
walkdir = "2"
petgraph = "0.6"

[profile.release]
opt-level = 3
lto = "thin"
