[package]
name = "rustviz-analyzer"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "rustviz_analyzer"
path = "src/lib.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
syn.workspace = true
proc-macro2.workspace = true
cargo_metadata.workspace = true
walkdir.workspace = true
petgraph.workspace = true
