[package]
name = "rustviz-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "rustviz"
path = "src/main.rs"

[dependencies]
rustviz-analyzer = { path = "../analyzer" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "process", "time"] }
axum = "0.7"
rust-embed = "8"
mime_guess = "2"
open = "5"
